# faucet-contract

./: Cargo.toml  README.md  lib.rs
metadata/: faucet.contract
