[package]
authors = [ "R0GUE <go@r0gue.io>" ]
edition = "2021"
name = "faucet"
version = "0.1.0"

[dependencies]
ink = { version = "=5.0.0", default-features = false, features = [ "ink-debug" ] }
pop-api = { git = "https://github.com/r0gue-io/pop-node", default-features = false, features = [
	"fungibles",
] }

[dev-dependencies]
drink = { package = "pop-drink", git = "https://github.com/r0gue-io/pop-drink" }
env_logger = { version = "0.11.3" }
serde_json = "1.0.114"

frame-support-procedural = { version = "30.0.1", default-features = false }
sp-runtime = { version = "38.0.0", default-features = false }
staging-xcm = { version = "14.1.0", default-features = false }

[lib]
path = "lib.rs"

[features]
default = [ "std" ]
e2e-tests = [  ]
ink-as-dependency = [  ]
std = [
	"ink/std",
	"pop-api/std",
]

